simple avro consumer

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,13 @@
-
+server.port=8082
+spring.kafka.bootstrap-servers=http://localhost:32000
+spring.kafka.properties.schema.registry.url: http://localhost:8081
+#spring.kafka.properties.value.subject.name.strategy=io.confluent.kafka.serializers.subject.RecordNameStrategy
+#spring.kafka.properties.value.subject.name.strategy=io.confluent.kafka.serializers.subject.RecordNameStrategy
+spring.kafka.properties.value.subject.name.strategy=io.confluent.kafka.serializers.subject.TopicRecordNameStrategy
+spring.kafka.consumer.properties.specific.avro.reader=true
+spring.kafka.streams.properties.default.key.serde=org.apache.kafka.common.serialization.Serdes$StringSerde
+spring.kafka.streams.properties.default.value.serde=io.confluent.kafka.streams.serdes.avro.SpecificAvroSerde
+spring.kafka.streams.properties.specific.avro.reader=true
+spring.devtools.restart.enabled=false
+spring.kafka.streams.application-id=kafka-consumer
+#spring.kafka.auto.create.topics.enable=false
